infrastructure/controllers/staging/longhorn/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-basic-auth
  namespace: longhorn-system
spec:
  basicAuth:
    secret: longhorn-basic-auth-users
